--- a/intent/app/src/main/res/layout/activity_main.xml
+++ b/intent/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="32dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="@string/main_activity"/>
+        android:layout_gravity="center"
+        android:text="@string/main_activity"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/go_to_second_activity_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/go_to_second_activity" />
 
 </LinearLayout>
