Added native ad sample

--- a/admob/app/src/main/res/layout/activity_main.xml
+++ b/admob/app/src/main/res/layout/activity_main.xml
@@ -23,5 +23,11 @@
         android:layout_height="wrap_content"
         android:text="@string/go_reward" />
 
+    <Button
+        android:id="@+id/native_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/go_native" />
+
 
 </LinearLayout>
