Added adaptive banner

--- a/admob/app/src/main/res/layout/activity_banner.xml
+++ b/admob/app/src/main/res/layout/activity_banner.xml
@@ -109,5 +109,19 @@
             ads:adSize="SMART_BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:text="@string/adaptive_banner" />
+
+        <FrameLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/ad_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp" />
+
     </LinearLayout>
 </ScrollView>
