added revoke button

--- a/firebase_authentication/app/src/main/res/layout/activity_main.xml
+++ b/firebase_authentication/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sign_in_button" />
 
+    <Button
+        android:id="@+id/revoke_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/revoke"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sign_out_button" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
