--- a/bluetooth_connection/app/src/main/res/layout/activity_device.xml
+++ b/bluetooth_connection/app/src/main/res/layout/activity_device.xml
@@ -32,11 +32,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <EditText
-        android:id="@+id/edit_text_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <Button
         android:id="@+id/button_connect"
         android:layout_width="match_parent"
@@ -49,6 +44,14 @@
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="@string/disconnect" />
+
+    <EditText
+        android:id="@+id/edit_text_message"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="start"
+        android:textAlignment="textStart" />
 
     <Button
         android:id="@+id/button_send_message"
