--- a/bluetooth_connection/app/src/main/res/layout/activity_main.xml
+++ b/bluetooth_connection/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,41 @@
     android:padding="36dp"
     tools:context=".MainActivity">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="16dp"
+        android:text="@string/ble"
+        android:textSize="24sp" />
+
     <Button
-        android:id="@+id/button_central"
+        android:id="@+id/button_ble_central"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/central" />
 
     <Button
-        android:id="@+id/button_peripheral"
+        android:id="@+id/button_ble_peripheral"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/peripheral" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="16dp"
+        android:text="@string/socket"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/button_socket_central"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/central" />
+
+    <Button
+        android:id="@+id/button_socket_peripheral"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/peripheral" />
