feat: take photo and save
撮影した画像を共有ディレクトリに保存されるようにした。

--- a/media-store/app/src/main/res/navigation/nav_graph.xml
+++ b/media-store/app/src/main/res/navigation/nav_graph.xml
@@ -10,8 +10,15 @@
         <action
             android:id="@+id/action_root_to_image_view"
             app:destination="@id/imageViewFragment" />
+        <action
+            android:id="@+id/action_root_to_take_photo"
+            app:destination="@id/takePhotoFragment" />
     </fragment>
     <fragment
         android:id="@+id/imageViewFragment"
         android:name="com.example.mediastore.ui.ImageViewFragment" />
+    <fragment
+        android:id="@+id/takePhotoFragment"
+        android:name="com.example.mediastore.ui.TakePhotoFragment"
+        android:label="TakePhotoFragment" />
 </navigation>
