--- a/media-store/app/src/main/res/layout/fragment_root.xml
+++ b/media-store/app/src/main/res/layout/fragment_root.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/button_show_images"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SHOW IMAGES"/>
+        android:text="SHOW IMAGES" />
+
+    <Button
+        android:id="@+id/button_take_photo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TAKE PHOTO" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
